# uv-auth

./: pyproject.toml
todo/: models.py  serializers.py  urls.py  views.py
todo/migrations/: 0001_initial.py
todos/: asgi.py  settings.py  urls.py  wsgi.py
